--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "322",
+  "name": "t3",
   "version": "0.0.1",
   "description": "A Three.js editor fork",
   "main": "build/three.js",
